# AzurLaneSorter-Rust

./: Cargo.toml  data.json  data_export.json  include.txt
src/: gui.rs  main.rs  ship.rs
