[package]
name = "AzurLaneSorter-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
reqwest = {version = "0.12", features = ["blocking"]}
scraper = "0.24.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
terminal-menu = "3.1.0"
iced = {version = "0.12", features = ["image", "advanced"]}
